docs(planning): design Companions 6-epic breakdown + ROPC risk gate
Step 2 of epic/story creation. Adds the approved 6-epic list (1 Foundation codec+config+bootstrap; 2 Stateless relay + A-1 smoke; 3 TLS A/B/C + OIDC ROPC security; 4 Observability; 5 Ship both deploy shapes; 6 Perf validation + docs) and the FR coverage map (all 19 FRs, exactly once). Refined via party-mode + advanced-elicitation: Epic 3 opens with a split ROPC risk gate -- contract-shape validation moves to Epic 2's opener; Story 3.1 is the ROPC deprecation/viability probe (all 4 AD-12 paths, fallback decision on fail, runs parallel to Epic 1); v1 ships explicitly ROPC-conditional.

Co-Authored-By: Claude <noreply@anthropic.com>